API used to show grocery stores near user based on their location

--- a/menu/planner/static/css/grocery_list.css
+++ b/menu/planner/static/css/grocery_list.css
@@ -8,7 +8,7 @@
 #wrapper{
     padding: 40px;
     width: auto;
-    height: 2000px;
+    height: auto;
     background-color: rgba(122, 169, 211, 0.568);
     font-family: Gurmukhi MN;
     color: rgb(64, 93, 119);
