--- a/menu/planner/templates/grocery_list.html
+++ b/menu/planner/templates/grocery_list.html
@@ -345,6 +345,14 @@
                 </ul>
                 {% endfor %}
             </div>
+
+            <div class="'grocery_stores">
+                <h4>Grocery Stores Near {{user.city}},{{user.state}}</h4>
+                {% for result in results %}
+                <strong>{{result.name}}</strong>
+                <p>{{result.formatted_address}}</p>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </body>
