--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -72,7 +72,7 @@
         <div class="buttons">
             <button onclick='location.href="/planner/create_menu"'>Create New Menu</button>
             <button onclick='location.href="/planner/user_recipes/{{user.id}}"'>Browse Recipes</button>
-            <button onclick='location.href="/planner/grocery_list"'>Grocery List</button>
+            <button onclick='location.href="/planner/grocery_list/{{user.city}}/{{user.state}}"'>Grocery List</button>
             
         </div>
     </div>
