adding all ingredients for the week to the grocery list, need to be able to add/delete an item from the list

--- a/menu/planner/templates/grocery_list.html
+++ b/menu/planner/templates/grocery_list.html
@@ -66,7 +66,9 @@
         </div>
 
         {% for grocery in groceries %}
-            <p>{{grocery}}</p>
+            <li>{% for character in grocery %}{% if character != '[' and character != "'" and character != ']'%}{% if character == ',' %}
+            </li>
+            <li>{% else %}{{character}}{% endif %}{% endif %}{% endfor %}
         {% endfor %}
 
         <!-- Form to add a food for the grocery list -->
